@@ -62,6 +62,7 @@
     <exec dir="." executable="${make.cmd}" failonerror="true">
       <env key="WORD_SIZE" value="${word.size}"/>
       <env key="THRIFT_HOME" value="${thrift.home}"/>
+      <env key="BOOST_HOME" value="${boost.home}"/>
       <env key="HIVE_ROOT" value="${hive.root}"/>
       <env key="BASE_DIR" value="${basedir}"/>
     </exec>
